(lang dune 3.22)

(name zoo)

(generate_opam_files true)

(source
 (github notbowen/zoo))

(authors "Hu Bowen <contact@hubowen.dev>")

(license MIT)

(package
 (name zoo)
 (synopsis "Monkey-based interpreted programming language")
 (depends ocaml))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
